--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
     "@types/jest": "^27.4.0",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
@@ -17,10 +18,8 @@
     "node": "^17.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-
     "react-hook-form": "^7.25.0",
     "style-components": "^0.1.0"
-
   },
   "devDependencies": {
     "@types/node": "17.0.10",
