--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/form/ContactForm.js", "src/components/form/CommentForm.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/form/ContactForm.js", "src/components/form/CommentForm.js", "src/blocks/loading/Loading.js"],
   "exclude": ["node_modules"]
 }
